samples/_failures_safe/1761478472_d3230e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_877d8f29.c: In function ‘main’:
./samples/SAFE/__tmp_877d8f29.c:168:9: error: expected expression at end of input
  168 |         if (from < 0 || from >= node_count || to < 0 || to >=
      |         ^~
./samples/SAFE/__tmp_877d8f29.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_877d8f29.c:168:9: error: expected declaration or statement at end of input
